<resources>
    <string name="app_name">KoplakMungkin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Lewati</string>
    <string name="next">Selanjutnya</string>
    <string name="started">Mulai</string>
    <string name="startedLocation">Izin Akses Lokasi</string>
    <string name="startedLocationBtn">Beri Akses Lokasi</string>
    <string name="descStartedLocation">Kami membutuhkan akses untuk mendapatkan lokasi \nanda untuk mengoptimalkan fitur di dalam aplikasi \nkopra lapak</string>
    <string name="onboarding1">Mulai bisnis \nKopramu!</string>
    <string name="descboarding1">Bersama Kopra Lapak, dapatkan informasi pembeli \ndan penjual dari seluruh indonesia dengan harga \nyang terbaik</string>
    <string name="onboarding2">Koneksi Bisnis \nkopra yang Luas</string>
    <string name="descboarding2">Bersama kopra lapak, Jalin kerjasama dan ekspansi \nbisnis Kopramu dengan mudah! dari yang terdekat \nsampai yang terjauh</string>
    <string name="permission_denied">Anda perlu mengizinkan izin Location untuk pengalaman yang lebih baik dengan aplikasi ini</string>
    <string name="title_op">Selamat Datang di Kopra Lapak</string>
    <string name="desc_op">silahkan masuk untuk memulai perjalananmu bersama kopra lapak</string>
    <string name="login_op">Masuk Kopra Lapak</string>
    <string name="regis_op">Daftar Baru</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="invalid_name">Nama tidak valid</string>
    <string name="invalid_password">Password tidak valid</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukkan email anda</string>
    <string name="password_hint">Masukkan sandi anda</string>
    <string name="rePassword_hint">Masukkan Kembali sandi anda</string>
    <string name="password">Sandi</string>
    <string name="rePassword">Ulangi Password</string>
    <string name="forgotPassword">Lupa Password?</string>
    <string name="optionLogin">atau masuk dengan</string>
    <string name="googleLogin">Masuk dengan google</string>
    <string name="decsRegist">Belum punya akun?</string>
    <string name="decsLogin">Sudah punya akun? </string>
    <string name="registBtn">Daftar</string>
    <string name="loginBtn">Masuk di sini</string>
    <string name="titleRegist">Daftar jadi member Kopra Lapak</string>
    <string name="descRegist">Silahkan Daftar untuk memulai perjalananmu bersama Kopra Lapak</string>
    <string name="next_register">Selanjutnya</string>
    <string name="title_personal_data">Data Pribadi</string>
    <string name="username">Nama</string>
    <string name="username_hint">Masukkan Namamu</string>
    <string name="chooseJob">Pilih Pekerjaan</string>
    <string name="chooseJob_hint">Pilih Pekerjaan Anda</string>
    <string name="cityDomicile">Kota Domisili</string>
    <string name="cityDomicile_hint">Kota Dimisili Anda</string>
    <string name="birth">Tanggal Lahir</string>
    <string name="birth_hint">DD/MM/YYYY</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="gender_hint">Laki-laki / Perempuan</string>
    <string name="invalid_date_format">Invalid date format (dd/mm/yyyy)</string>
    <string name="welcome">Selamat bergabung!</string>
    <string name="descWelcome">Ayo jelajahi fitur-fitur yang ada di Kopra Lapak\n sekarang Juga!</string>
    <string name="welcomeBtn">Yuk Jelajahi Kopra Lapak</string>
    <string name="bsTitleTv">Pilih Pekerjaan</string>
    <string name="option1_job">Penjual Kopra</string>
    <string name="option2_job">Pembeli Kopra</string>
    <string name="bsCityTitleTv">Kota Domisisli</string>
    <string name="searchbar_hint">Cari Kota Anda</string>
    <string name="title_kopra">Jual Kopra</string>
    <string name="title_forum">Forum</string>
    <string name="title_home">Home</string>
    <string name="title_mentor">Mentor</string>
    <string name="title_profile">Profile</string>
    <string name="content_description_media">image</string>
    <string name="date_text">08 November 2023</string>
    <string name="title">Melihat Potensi Industri Kelapa dan Kopra yang Luput dari Perhatian Pemerintah…</string>
    <string name="floating_button">Buat Feeds</string>
    <string name="news">Berita</string>
    <string name="news_all">Lihat Semua</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="feed">Feeds</string>
    <string name="harga_text">Harga : Rp %d /Kg</string>
    <string name="harga_example">1.300</string>
    <string name="massa">/Kg</string>
    <string name="kota">Kota %s</string>
    <string name="contact">Contact : %d</string>
    <string name="grade">Grade : %s</string>
    <string name="camera">Camera</string>
    <string name="description_hint">Deskripsi</string>
    <string name="price_hint">Price</string>
    <string name="contact_hint">Contact</string>
    <string name="submit">Submit</string>
    <string name="jual">Jual Kopra</string>
    <string name="create_news">Buat Berita</string>

</resources>