<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ImageButton
      android:id="@+id/backBtn"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:src="@drawable/backbtn"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/titleRegisTv"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/titleRegist"
        android:textColor="@color/brown"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <TextView
        android:id="@+id/descRegisTv"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/descRegist"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegisTv" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descRegisTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:startIconDrawable="@drawable/ic_email"
        app:errorEnabled="true"
        app:errorTextColor="@color/brown">

        <com.example.koplakmungkin.customview.CustomEditTextEmail
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        app:errorTextColor="@color/brown">

        <com.example.koplakmungkin.customview.CustomEditTextPassword
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/rePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/rePassword"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rePasswordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordTextView"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        app:errorTextColor="@color/brown">

        <com.example.koplakmungkin.customview.CustomEditTextPassword
            android:id="@+id/rePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/rePassword_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:text="@string/next_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rePasswordEditTextLayout" />

    <TextView
        android:id="@+id/optionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/optionLogin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextBtn" />

    <Button
        android:id="@+id/googleLoginBtn"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_google"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/googleLogin"
        android:theme="@style/buttonstyle1"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionTextView" />

    <TextView
        android:id="@+id/descRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/decsLogin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/registerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginBtn" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:text="@string/loginBtn"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descRegisterTextView"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>