<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleRegisTv"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/title_personal_data"
        android:textColor="@color/brown"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegisTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:boxCollapsedPaddingTop="10dp"
        app:errorTextColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView">

        <com.example.koplakmungkin.customview.CustomEditTextName
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/chooseJobTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/chooseJob"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chooseJobEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/chooseJobTextView"
        app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
        app:errorTextColor="@color/brown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chooseJobEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/chooseJob_hint"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cityDomicileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/cityDomicile"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseJobEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityDomicileLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/cityDomicileTextView"
        app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
        app:errorTextColor="@color/brown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityDomicileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cityDomicile_hint"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/birth"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityDomicileLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthEditTextLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor ="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthTextView"
        app:errorTextColor="@color/brown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:paddingStart="15dp"
            android:hint="@string/birth_hint"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genderLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
        app:errorTextColor="@color/brown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/genderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/gender_hint"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dataBtn"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:text="@string/registBtn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>