<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feed_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/userImageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/user"/>

    <TextView
        android:id="@+id/usernameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/userImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Full Name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageView"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivnews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_iv"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/dateTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/titleHargaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/harga_text"
        android:textAlignment="textStart"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

<!--    <TextView-->
<!--        android:id="@+id/hargaTv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="4dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/harga_example"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textAppearance="?attr/textAppearanceBodyMedium"-->
<!--        android:textColor="?android:attr/textColorSecondary"-->
<!--        app:layout_constraintStart_toEndOf="@+id/titleHargaTv"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/card" />-->

<!--    <TextView-->
<!--        android:id="@+id/massaTv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/massa"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textAppearance="?attr/textAppearanceBodyMedium"-->
<!--        android:textColor="?android:attr/textColorSecondary"-->
<!--        app:layout_constraintStart_toEndOf="@+id/hargaTv"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/card" />-->

    <TextView
        android:id="@+id/tittleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textAlignment="textStart"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHargaTv" />

    <TextView
        android:id="@+id/kotaTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kota"
        android:textAlignment="textStart"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleTv" />

    <TextView
        android:id="@+id/contactTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact"
        android:textAlignment="textStart"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@+id/kotaTv"
        app:layout_constraintTop_toBottomOf="@+id/tittleTv" />

</androidx.constraintlayout.widget.ConstraintLayout>